--- a/doc/talk/bijections.tex
+++ b/doc/talk/bijections.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.6 on 2025-06-13 10:38:09
+% Created by tikzDevice version 0.12.6 on 2025-06-14 12:11:57
 % !TEX encoding = UTF-8 Unicode
 \documentclass[10pt]{article}
 \usepackage{tikz}
@@ -22,10 +22,10 @@
 \end{scope}
 \begin{scope}
 \path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
-\definecolor{fillColor}{gray}{0.92}
+\definecolor{fillColor}{RGB}{255,255,255}
 
 \path[fill=fillColor] ( 29.55, 57.56) rectangle (302.65,212.31);
-\definecolor{drawColor}{RGB}{255,255,255}
+\definecolor{drawColor}{gray}{0.92}
 
 \path[draw=drawColor,line width= 0.2pt,line join=round] ( 29.55, 66.00) --
 	(302.65, 66.00);
@@ -189,6 +189,1341 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 29.55,170.44) -- ( 35.24,170.44);
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 29.55,196.55) -- ( 35.24,196.55);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (154.81,156.33) -- (290.23,156.33);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (170.46,165.36) --
+	(154.81,156.33) --
+	(170.46,147.29);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 7pt off 3pt ,line join=round] (274.59,147.29) --
+	(290.23,156.33) --
+	(274.59,165.36);
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+\definecolor{fillColor}{RGB}{255,255,255}
+
+\path[draw=drawColor,line width= 0.3pt,line join=round,line cap=round,fill=fillColor] (211.38,149.20) --
+	(233.67,149.20) --
+	(233.59,149.20) --
+	(233.91,149.21) --
+	(234.22,149.28) --
+	(234.52,149.39) --
+	(234.80,149.55) --
+	(235.05,149.76) --
+	(235.26,150.00) --
+	(235.43,150.27) --
+	(235.56,150.56) --
+	(235.63,150.87) --
+	(235.66,151.19) --
+	(235.66,151.19) --
+	(235.66,161.46) --
+	(235.66,161.46) --
+	(235.63,161.78) --
+	(235.56,162.09) --
+	(235.43,162.38) --
+	(235.26,162.66) --
+	(235.05,162.90) --
+	(234.80,163.10) --
+	(234.52,163.26) --
+	(234.22,163.37) --
+	(233.91,163.44) --
+	(233.67,163.45) --
+	(211.38,163.45) --
+	(211.62,163.44) --
+	(211.30,163.45) --
+	(210.98,163.41) --
+	(210.67,163.32) --
+	(210.38,163.19) --
+	(210.12,163.00) --
+	(209.89,162.78) --
+	(209.69,162.52) --
+	(209.54,162.24) --
+	(209.44,161.94) --
+	(209.39,161.62) --
+	(209.38,161.46) --
+	(209.38,151.19) --
+	(209.39,151.36) --
+	(209.39,151.03) --
+	(209.44,150.72) --
+	(209.54,150.41) --
+	(209.69,150.13) --
+	(209.89,149.87) --
+	(210.12,149.65) --
+	(210.38,149.47) --
+	(210.67,149.33) --
+	(210.98,149.24) --
+	(211.30,149.20) --
+	cycle;
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{RGB}{169,169,169}
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (222.52,152.52) {$64 \times$};
+\end{scope}
+\begin{scope}
+\path[clip] ( 29.55, 57.56) rectangle (302.65,212.31);
+\definecolor{drawColor}{gray}{0.20}
+
+\path[draw=drawColor,line width= 0.5pt,line join=round,line cap=round] ( 29.55, 57.56) rectangle (302.65,212.31);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (307.15,216.81);
@@ -261,7 +1596,7 @@
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (307.15,216.81);
-\definecolor{fillColor}{gray}{0.92}
+\definecolor{fillColor}{RGB}{255,255,255}
 
 \path[fill=fillColor] (100.84,  9.00) rectangle (115.30, 23.45);
 \end{scope}
@@ -279,7 +1614,7 @@
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (307.15,216.81);
-\definecolor{fillColor}{gray}{0.92}
+\definecolor{fillColor}{RGB}{255,255,255}
 
 \path[fill=fillColor] (168.91,  9.00) rectangle (183.36, 23.45);
 \end{scope}
