--- a/doc/talk/talk.tex
+++ b/doc/talk/talk.tex
@@ -43,6 +43,10 @@
 
 \maketitle
 
+% TODO: 2. motivation
+
+% TODO: 3. state the problem
+
 \begin{frame}{Knowledge Compilation Workflow}
   \centering
   \begin{tikzpicture}
@@ -82,43 +86,46 @@
   \end{tikzpicture}
 \end{frame}
 
-\begin{frame}{Friends \& Smokers: The Formula}
-  \[
-    (\forall x,y \in \Delta\text{.
-    } S(x) \land F(x, y) \Rightarrow S(y)) \land (\forall x \in \Delta\text{.
-    }S(x) \Rightarrow C(x))
-  \]
+% TODO: 5. go into detail on the contributions
+
+\begin{frame}{Benchmarks}
+  \begin{itemize}
+    \item Friends \& Smokers
+          \[
+          (\forall x,y \in \Delta\text{.
+          } S(x) \land F(x, y) \to S(y)) \land (\forall x \in \Delta\text{.
+          }S(x) \to C(x))
+          \]
+    \item Functions
+          \begin{gather*}
+            (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y)) \land{}\\
+            (\forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \to y = z)
+          \end{gather*}
+    \item Bijections
+          \begin{gather*}
+            (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y))\land{}\\
+            (\forall y \in \Delta\text{. }\exists x \in \Gamma\text{. }P(x, y))\land{}\\
+            (\forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \to y = z)\land{}\\
+            (\forall x, z \in \Gamma\text{. }\forall y \in \Delta\text{. }P(x, y) \land P(z, y) \to x = z)
+          \end{gather*}
+  \end{itemize}
 \end{frame}
 
-\begin{frame}{Friends \& Smokers: The Results}
+\begin{frame}{Friends \& Smokers}
   \centering
   \includegraphics{friends.pdf}
 \end{frame}
 
-\begin{frame}{Functions: The Formula}
-  \begin{gather*}
-    (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y)) \land{}\\
-    (\forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \Rightarrow y = z)
-  \end{gather*}
+\begin{frame}{Bijections}
+  \centering
+  \includegraphics{bijections.pdf}
 \end{frame}
 
-\begin{frame}{Functions: The Results}
+\begin{frame}{Functions}
   \centering
   \includegraphics{functions.pdf}
 \end{frame}
 
-\begin{frame}{Bijections: The Formula}
-  \begin{gather*}
-    (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y))\land{}\\
-    (\forall y \in \Delta\text{. }\exists x \in \Gamma\text{. }P(x, y))\land{}\\
-    (\forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \Rightarrow y = z)\land{}\\
-    (\forall x, z \in \Gamma\text{. }\forall y \in \Delta\text{. }P(x, y) \land P(z, y) \Rightarrow x = z)
-  \end{gather*}
-\end{frame}
-
-\begin{frame}{Bijections: The Results}
-  \centering
-  \includegraphics{bijections.pdf}
-\end{frame}
+% TODO: 14. conclusion + future work
 
 \end{document}
