--- a/doc/talk/talk.tex
+++ b/doc/talk/talk.tex
@@ -4,6 +4,8 @@
 \usepackage[UKenglish]{isodate}
 \usepackage{tikz}
 \usepackage[linesnumbered,ruled,vlined]{algorithm2e}
+\usepackage{complexity}
+\usepackage{fontawesome}
 
 \usetikzlibrary{arrows.meta}
 \usetikzlibrary{backgrounds}
@@ -43,9 +45,60 @@
 
 \maketitle
 
-% TODO: 2. motivation
+\begin{frame}{First-Order Model Counting: The Motivation}
+  \begin{exampleblock}{Example Setting}
+    \begin{itemize}
+      \item Let \structure{$\Delta$} be a set of cardinality \structure{$n$}
+      \item Suppose we want to count all \structure{$P \subseteq \Delta^{2}$}
+            that are:
+            \begin{itemize}
+              \item functions,
+              \item bijections,
+              \item partial orders,
+              \item symmetric,
+              \item transitive,
+              \item etc.
+            \end{itemize}
+    \end{itemize}
+  \end{exampleblock}
+  \pause
+  \begin{itemize}
+    \item[\faThumbsODown] Propositional model counting (\structure{$\#\SAT$}) is
+          \alert{$\#\P$-complete}
+    \item[\faThumbsOUp] But many of these counting problems have
+          \alert{efficient solutions}
+    \item And we can find them using \alert{first-order model counting}
+          \begin{itemize}
+            \item i.e., reasoning about sets, subsets, and arbitrary elements
+                  without \alert{grounding} them
+          \end{itemize}
+  \end{itemize}
+\end{frame}
 
-% TODO: 3. state the problem
+% TODO:
+% 1) define FOMC: any number of domains, any number of predicates of any arity
+% 2) introduce WFOMC algorithms
+% 3) Introduce Greedy vs BFS?
+\begin{frame}{First-Order Model Counting}
+\end{frame}
+
+\begin{frame}{The Problem with \textsc{Crane}}
+  \begin{block}{A Solution Produced for the Bijection-Counting Problem}
+  \begin{align*}
+    f(m, n) &= \sum_{l=0}^{n} \binom{n}{l}{(-1)}^{n-l}g(l, m),\\
+    g(l, m) &= g(l-1, m) + mg(l-1, m-1)
+  \end{align*}
+  \end{block}
+  \pause
+  \begin{alertblock}{Issues}
+    \begin{description}
+      \item[Completeness:] what are the base cases of \structure{$g$}?
+      \item[Usability:] how do I compute, e.g., \structure{$f(7, 7)$}?
+    \end{description}
+  \end{alertblock}
+\end{frame}
+% NOTE: after some simplifications
+% NOTE: the first but not the best: it can also find a linear-time solution
 
 \begin{frame}{Knowledge Compilation Workflow}
   \centering
@@ -86,7 +139,10 @@
   \end{tikzpicture}
 \end{frame}
 
-% TODO: 5. go into detail on the contributions
+% TODO: 4 more slides explaining the solution (maybe including the theorems)
+
+\begin{frame}{}
+\end{frame}
 
 \begin{frame}{Benchmarks}
   \begin{itemize}
@@ -96,11 +152,13 @@
           } S(x) \land F(x, y) \to S(y)) \land (\forall x \in \Delta\text{.
           }S(x) \to C(x))
           \]
+          \pause
     \item Functions
           \begin{gather*}
             (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y)) \land{}\\
             (\forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \to y = z)
           \end{gather*}
+          \pause
     \item Bijections
           \begin{gather*}
             (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y))\land{}\\
@@ -126,6 +184,8 @@
   \includegraphics{functions.pdf}
 \end{frame}
 
-% TODO: 14. conclusion + future work
+\begin{frame}{Summary}
+  TODO: and future work
+\end{frame}
 
 \end{document}
